--- a/produc-view-service-feign/src/main/resources/templates/products.html
+++ b/produc-view-service-feign/src/main/resources/templates/products.html
@@ -32,6 +32,11 @@
 					<td th:text="${p.price}"></td>
 				</tr>
 			</tbody>
+			<tr>
+				<td align="center" colspan="3">
+					<p th:text="${version}">how2j springcloud version unknown</p>
+				</td>
+			</tr>
 		</table>
 	</div>
 </body>
